# gauth_erpgulf

./: README.md  backend_server.py  pyproject.toml
gauth_erpgulf/: hooks.py  modules.txt
gauth_erpgulf/fixtures/: backend_server_settings.json  countries_and_ip_address.json  doctype.json
gauth_erpgulf/gauth_erpgulf/: 2fa.py  backend_server.py  firebase_sms.py  web_logging.py
gauth_erpgulf/gauth_erpgulf/doctype/api_logs/: api_logs.js  api_logs.json  api_logs.py  test_api_logs.py
gauth_erpgulf/gauth_erpgulf/doctype/backend_server_settings/: backend_server_settings.js  backend_server_settings.json  backend_server_settings.py  test_backend_server_settings.py
gauth_erpgulf/gauth_erpgulf/doctype/buyer/: buyer.js  buyer.json  buyer.py  test_buyer.py
gauth_erpgulf/gauth_erpgulf/doctype/countries_and_ip_address/: countries_and_ip_address.json  countries_and_ip_address.py
gauth_erpgulf/gauth_erpgulf/doctype/payment_gateway_initiated/: payment_gateway_initiated.js  payment_gateway_initiated.json  payment_gateway_initiated.py  test_payment_gateway_initiated.py
gauth_erpgulf/gauth_erpgulf/doctype/user_log_details/: test_user_log_details.py  user_log_details.js  user_log_details.json  user_log_details.py
gauth_erpgulf/gauth_erpgulf/doctype/web_access_log/: test_web_access_log.py  web_access_log.js  web_access_log.json  web_access_log.py
gauth_erpgulf/public/js/: web_log.js
